Adding basic web servicd uwing rest/jersey for OnmsNode

--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,7 @@
         classpath:/org/opennms/web/svclayer/applicationContext-svclayer.xml
         classpath:/META-INF/opennms/applicationContext-reporting.xml
         /WEB-INF/applicationContext-acegi-security.xml
+        /WEB-INF/applicationContext-jersey.xml
     </param-value>
   </context-param>
   
@@ -248,6 +249,21 @@
   <listener>
     <listener-class>org.opennms.web.acegisecurity.AcegiSessionAttributeListenerOnmsEventBuilder</listener-class>
   </listener>
+
+  <!--  RESTful Web Services -->
+  <servlet>
+    <servlet-name>opennms-jersey</servlet-name>
+    <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
+    <init-param>
+      <param-name>com.sun.jersey.config.property.resourceConfigClass</param-name>
+      <param-value>com.sun.jersey.api.core.PackagesResourceConfig</param-value>
+    </init-param>
+    <init-param>
+      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-value>org.opennms.web.rest</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
 
   <!--  servlet that gwt rpc requests get mapped to -->
    <servlet>
