--- a/dependencies/opennms-jersey/pom.xml
+++ b/dependencies/opennms-jersey/pom.xml
@@ -32,6 +32,10 @@
           <groupId>commons-logging</groupId>
           <artifactId>commons-logging</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jsp-api</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -72,6 +76,10 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-spring-web</artifactId>
       <version>${project.version}</version>
+    </dependency>
+     <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jsp-2.1</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
