--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -165,9 +165,19 @@
   </filter>
   
   <filter>
+    <filter-name>openSessionInViewFilter</filter-name>
+    <filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+  </filter>
+  
+  <filter>
     <filter-name>eXtremeExport</filter-name>
     <filter-class>org.extremecomponents.table.filter.ExportFilter</filter-class>
   </filter>
+  
+  <filter-mapping>
+    <filter-name>openSessionInViewFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <filter-mapping>
     <filter-name>Acegi Filter Chain Proxy</filter-name>
@@ -252,7 +262,7 @@
 
   <!--  RESTful Web Services -->
   <servlet>
-    <servlet-name>opennms-jersey</servlet-name>
+    <servlet-name>opennmsRestWebServices</servlet-name>
     <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.resourceConfigClass</param-name>
@@ -636,6 +646,11 @@
     <url-pattern>/account/selfService/newPasswordAction</url-pattern>
   </servlet-mapping>
   
+  <!-- Servlet mappings for REST Services -->
+  <servlet-mapping>
+    <servlet-name>opennmsRestWebServices</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
   
   <servlet>
     <servlet-name>nodeLabelChange</servlet-name>
