--- a/opennms-tools/system-reporter/pom.xml
+++ b/opennms-tools/system-reporter/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>system-reporter</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.7.0-laszlo-SNAPSHOT</version>
   <packaging>groovy-jar</packaging>
   <build>
     <plugins>
@@ -92,7 +92,7 @@ groovy.compiler.output.path=target/classes
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-dao</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>1.7.0-laszlo-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
