another thing that matt had committed after my initial branch messup

--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -225,7 +225,7 @@
             </goals>
             <configuration>
               <generatedClasses>${basedir}/target/jsp-classes</generatedClasses>
-	      <jspFileExcludes>*/lps/*.jsp</jspFileExcludes>
+	      <excludes>*/lps/*.jsp</excludes>
             </configuration>
           </execution>
         </executions>
