--- a/opennms-alarmd/pom.xml
+++ b/opennms-alarmd/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.opennms</groupId>
     <artifactId>opennms</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.7.0-HIBERNATE-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-alarmd</artifactId>
