Add ability to enable/disable virtual groups feature.

--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -269,3 +269,6 @@ org.opennms.netmgt.jetty.port = 8980
 # IP address of the DNS server that the DnsProvisioningAdapter
 # should send dynamic DNS updates to
 importer.adapter.dns.server=127.0.0.1
+
+# Enable virtual groups feature
+opennms.virtualgroups.enabled=true
