Add microblog notification strategy, remove obsolete copyright language

--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -303,5 +303,9 @@
       <groupId>org.opennms</groupId>
       <artifactId>rancid-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.homeip.yusuke</groupId>
+      <artifactId>twitter4j</artifactId>
+    </dependency>
   </dependencies>
 </project>
